--- a/src/html/header.html
+++ b/src/html/header.html
@@ -1,21 +1,37 @@
 <header class="header  @@class _fixed">
     <div class="header__container _container">
         <div class="header__body">
+            <a href="" class="header__call">
+                <img src="@img/wh.png" alt="">
+            </a>
+            <a href="/" class="header__logo">
+                <img src="@img/icons/logo.svg" alt="">
+            </a>
+            <nav>
+                <ul>
+                    <li><a href="">Услуги</a></li>
+                    <li><a href="">Проекты</a></li>
+                    <li><a href="">Как мы работаем</a></li>
+                    <li><a href="">Отзывы</a></li>
+                    <li><a href="">Контакты</a></li>
+                </ul>
+            </nav>
+            <div class="header__contacts">
+                <a href="">
+                    <img src="@img/wh.png" alt="">
+                </a>
+                <a href="">
+                    <img src="@img/tg.png" alt="">
+                </a>
+                <a href="">
+                    <img src="@img/yt.png" alt="">
+                </a>
+            </div>
             <button class="header__burger">
                 <span></span>
                 <span></span>
+                <span></span>
             </button>
-            <a href="/" class="header__logo">
-                <img class="main-logo" src="@img/logo-small.svg" alt="">
-                <div class="animated-logo">
-                    <img class="eye" src="img/icons/logo/eye.svg" alt="">
-                    <img class="mv" src="img/icons/logo/mv.svg" alt="">
-                    <img class="st" src="img/icons/logo/st.svg" alt="">
-                </div>
-            </a>
-            <a href="" class="header__basket">
-                <span>0</span>
-            </a>
         </div>
     </div>
 </header>
