fix project section grid layout

--- a/src/index.html
+++ b/src/index.html
@@ -7,9 +7,9 @@
 
 <main>
 
-    <section class="hero hero" data-replace-width="1300">
+    <section class="hero hero">
         <div class="hero__container _container">
-            <div class="hero__body" data-replace-new-position="afterend">
+            <div class="hero__body">
                 <div class="hero__content">
                     <h1>
                         <span>Ваш дом — ваша мечта,</span>
@@ -17,7 +17,7 @@
                     </h1>
                     <div>
                         <p>Строим жилье в Краснодарском крае и Адыгеепо индивидуальному или готовому проекту</p>
-                        <div class="hero__actions" data-replace-old-position="afterend">
+                        <div class="hero__actions">
                             <a href="" class="_btn _btn-fill">Обсудим ваш будущий дом?</a>
                             <a href="" class="_btn _btn-stroke">рассчитать стоимость</a>
                         </div>
@@ -249,7 +249,7 @@
 
                         <p>Примерная стоимость: <label>1 200 000</label><span> ₽</span></p>
 
-                        <a href="" class="_btn _btn-fill">Оставить заявку</a>
+                        <button class="_btn _btn-fill">Оставить заявку</button>
                     </div>
                 </div>
             </div>
