add all sections

--- a/src/html/header.html
+++ b/src/html/header.html
@@ -17,14 +17,20 @@
                 </ul>
             </nav>
             <div class="header__contacts">
-                <a href="">
-                    <img src="@img/wh.png" alt="">
+                <a href="" class="wh">
+                    <svg viewBox="0 0 30 30" >
+                        <use xlink:href="@img/svg/icons.svg#whatsapp"></use>
+                    </svg>
                 </a>
-                <a href="">
-                    <img src="@img/tg.png" alt="">
+                <a href="" class="tg">
+                    <svg viewBox="0 0 30 30" >
+                        <use xlink:href="@img/svg/icons.svg#telegram"></use>
+                    </svg>
                 </a>
-                <a href="">
-                    <img src="@img/yt.png" alt="">
+                <a href="" class="yt">
+                    <svg viewBox="0 0 30 30" >
+                        <use xlink:href="@img/svg/icons.svg#youtube"></use>
+                    </svg>
                 </a>
             </div>
             <button class="header__burger">
