--- a/src/html/footer.html
+++ b/src/html/footer.html
@@ -1,76 +1,63 @@
 <footer class="footer @@class" id="footer">
-    <div class="footer__bgi">
-        <img src="@img/footer-bgi.png" alt="">
-    </div>
     <div class="footer__container _container">
         <div class="footer__body">
             <div class="footer__top">
-                <div class="footer__navigation footer__column" data-animate-stagger data-animate-bottom>
-                    <span>Каталог</span>
-                    <ul>
-                        <li><a href="">Marble</a></li>
-                        <li><a href="">Quartzite</a></li>
-                        <li><a href="">Granite</a></li>
-                        <li><a href="">Onyx</a></li>
-                        <li><a href="">Travertine</a></li>
-                        <li><a href="">Exclusive</a></li>
-                        <li><a href="">Semi-precious Antoliny</a></li>
-                    </ul>
+                <div class="footer__logocolumn">
+                    <a href="" class="footer__logo">
+                        <img src="@img/footer-logo.png" alt="">
+                    </a>
+                    <p>ЖДЕМ ВАС В НАШЕМ <br> КОТТЕДЖНОМ ПОСЕЛКЕ</p>
+                    <div>
+
+                        <a href="" class="wh">
+                            <svg viewBox="0 0 30 30">
+                                <use xlink:href="@img/svg/icons.svg#whatsapp"></use>
+                            </svg>
+                        </a>
+                        <a href="" class="tg">
+                            <svg viewBox="0 0 30 30">
+                                <use xlink:href="@img/svg/icons.svg#telegram"></use>
+                            </svg>
+                        </a>
+                        <a href="" class="yt">
+                            <svg viewBox="0 0 30 30">
+                                <use xlink:href="@img/svg/icons.svg#youtube"></use>
+                            </svg>
+                        </a>
+                    </div>
                 </div>
-                <div class="footer__navigation footer__column" data-animate-stagger data-animate-bottom>
+                <nav class="footer__column">
                     <span>Навигация</span>
                     <ul>
-                        <li><a href="">Блог</a></li>
+                        <li><a href="">Услуги</a></li>
                         <li><a href="">Проекты</a></li>
-                        <li><a href="">Компания</a></li>
-                        <li><a href="">Политика конфиденциальности</a></li>
+                        <li><a href="">Как мы работаем</a></li>
+                        <li><a href="">Контакты</a></li>
+                        <li><a href="">Отзывы</a></li>
                     </ul>
+                </nav>
+                <div class="footer__column offices">
+                    <span>Офис продаж</span>
+                    <label>г. Краснодар <br> ул. Кубанская Набережная, дом <br> 45 (БЦ «Премьер»)</label>
+                    <a href=""><img src="@img/icons/rout.svg" alt=""><label>Как проехать</label></a>
                 </div>
-                <ul class="footer__contacts footer__column">
-                    <div data-animate-stagger data-animate-bottom>
-                        <span>Почта</span>
-                        <a href="mailto:mramorov.ru@gmail.com" target="_blank">mramorov.ru@gmail.com</a>
-                    </div>
-                    <div data-animate-stagger data-animate-bottom>
-                        <span>Телефон</span>
-                        <ul>
-                            <li>
-                                <label>Пн-Пт.</label>
-                                <a href="tel:+74955805080" target="_blank" class="_numbers">8 (495) 580-50-80</a>
-                            </li>
-                            <li>
-                                <label>Пн-Вс.</label>
-                                <a href="tel:+79250006212 " target="_blank" class="_numbers">8 (925) 000-62-12 </a>
-                            </li>
-                        </ul>
-                    </div>
-                    <div data-animate-stagger data-animate-bottom>
-                        <span>соцсети</span>
-                        <ul>
-                            <li><a href="">WhatsApp</a></li>
-                            <li><a href="">Telegram</a></li>
-                            <li><a href="">Instagram</a></li>
-                            <li><a href="">YouTube</a></li>
-                        </ul>
-                    </div>
-
-                </ul>
-                <div class="footer__services footer__column" data-animate-stagger data-animate-bottom>
-                    <span>Услуги</span>
-                    <ul>
-                        <li><a href="">Подбор камня</a></li>
-                        <li><a href="">Изготовление изделий</a></li>
-                        <li><a href="">Монтаж и ресстоврация</a></li>
-                    </ul>
+                <div class="footer__column contacts">
+                    <span>Контакты</span>
+                    <a href="mailto:info@bountyhouse.ru" target="_blank"><img src="@img/icons/email.svg"
+                            alt=""><label>info@bountyhouse.ru</label></a>
+                    <a href="tel:+78612123114" target="_blank"><img src="@img/icons/tel.svg" alt=""><label>+7 (861)
+                            212-31-14</label></a>
+                    <a href="https://t.me/@bounty_village_krasnodar"><img src="@img/icons/tg.svg"
+                            alt=""><label>@bounty_village_krasnodar</label></a>
+                    <p>ИП Демченко Екатерина Андреевна</p>
+                    <p>ИНН 263507867470</p>
+                    <p>ОГРНИП 321237500283539</p>
                 </div>
             </div>
-            <a href="" class="footer__logo" data-animate-stagger data-animate-bottom>
-                <img src="@img/icons/footer-logo.svg" alt="">
-            </a>
-            <div class="footer__bottom" data-animate-stagger data-animate-opacity>
-                <span>2012©</span>
-                <a href="">44°03'44.8"N — 10°03'16.4"E</a>
-                <a href=""><span>Разработка от —</span>YAN Studio.</a>
+
+            <div class="footer__bottom">
+                <span>© 2023. Все права защищены. BOUNTYHOUSE</span>
+                <a href="">Политика конфиденциальности</a>
             </div>
         </div>
     </div>
