--- a/src/html/menu.html
+++ b/src/html/menu.html
@@ -4,74 +4,31 @@
             <span></span>
             <span></span>
         </button>
-        <nav data-bottom>
+        <nav>
             <ul>
-                <li><a href="">Marble</a></li>
-                <li><a href="">Quartzite</a></li>
-                <li><a href="">Granite</a></li>
-                <li><a href="">Onyx</a></li>
-                <li><a href="">Travertine</a></li>
-                <li><a href="">Exclusive</a></li>
-                <li><a href="">Semi-precious Antoliny</a></li>
+                <li><a href="">Услуги</a></li>
+                <li><a href="">Проекты</a></li>
+                <li><a href="">Как мы работаем</a></li>
+                <li><a href="">Отзывы</a></li>
+                <li><a href="">Контакты</a></li>
             </ul>
         </nav>
-        <div class="menu__search" data-bottom>
-            <form action="#" class="search-form">
-                <input type="search" name="s" placeholder="Найти">
-                <button type="submit">
-                    <img src="@img/icons/search.svg" alt="">
-                </button>
-            </form>
-        </div>
-        <div class="menu__bottom">
-            <div class="menu__bottom-navigation menu__bottom-column" data-opacity>
-                <span>Навигация</span>
-                <ul>
-                    <li><a href="">Блог</a></li>
-                    <li><a href="">Проекты</a></li>
-                    <li><a href="">Компания</a></li>
-                </ul>
-            </div>
-            <ul class="menu__bottom-contacts menu__bottom-column">
-                <div data-bottom>
-                    <span>Почта</span>
-                    <a href="mailto:mramorov.ru@gmail.com" target="_blank">mramorov.ru@gmail.com</a>
-                </div>
-                <div data-bottom>
-                    <span>Телефон</span>
-                    <ul>
-                        <li>
-                            <label>Пн-Пт.</label>
-                            <a href="tel:+74955805080" target="_blank" class="_numbers">8 (495) 580-50-80</a>
-                        </li>
-                        <li>
-                            <label>Пн-Вс.</label>
-                            <a href="tel:+79250006212 " target="_blank" class="_numbers">8 (925) 000-62-12 </a>
-                        </li>
-                    </ul>
-                </div>
-                <div data-bottom>
-                    <span>соцсети</span>
-                    <ul>
-                        <li><a href="">WhatsApp</a></li>
-                        <li><a href="">Telegram</a></li>
-                        <li><a href="">Instagram</a></li>
-                        <li><a href="">YouTube</a></li>
-                    </ul>
-                </div>
-                <div data-bottom>
-                    <span>Адрес</span>
-                    <a href="" class="_numbers">44°03'44.8"N — 10°03'16.4"E</a>
-                </div>
-            </ul>
-            <div class="menu__bottom-services menu__bottom-column" data-opacity>
-                <span>Услуги</span>
-                <ul>
-                    <li><a href="">Подбор камня</a></li>
-                    <li><a href="">Изготовление изделий</a></li>
-                    <li><a href="">Монтаж и ресстоврация</a></li>
-                </ul>
-            </div>
+        <div class="menu__contacts">
+            <a href="" class="wh">
+                <svg viewBox="0 0 30 30">
+                    <use xlink:href="@img/svg/icons.svg#whatsapp"></use>
+                </svg>
+            </a>
+            <a href="" class="tg">
+                <svg viewBox="0 0 30 30">
+                    <use xlink:href="@img/svg/icons.svg#telegram"></use>
+                </svg>
+            </a>
+            <a href="" class="yt">
+                <svg viewBox="0 0 30 30">
+                    <use xlink:href="@img/svg/icons.svg#youtube"></use>
+                </svg>
+            </a>
         </div>
     </div>
 </div>
