add contact section

--- a/src/index.html
+++ b/src/index.html
@@ -263,41 +263,43 @@
                 <div class="grid">
                     <a href class="sale">
                         <img src="img/sale.png" alt="">
-                        <div>
-                            <p>узнай о сезонных акциях</p>
-                        </div>
+                        <p>узнай о сезонных акциях</p>
                     </a>
                     <a href="" class="project-card">
                         <img class="project-card__img" src="img/sale.png" alt="">
-
-                        <button><img src="img/icons//slider-right-arrow.svg" alt=""></button>
                         <div>
-                            <h3>жилой комплексСтаврополь</h3>
+                            <svg width="21" height="22" viewBox="0 0 21 22">
+                                <use xlink:href='img/svg/icons.svg#arrow' />
+                            </svg>
                         </div>
+                        <h3>жилой комплексСтаврополь</h3>
                     </a>
                     <a href="" class="project-card">
                         <img class="project-card__img" src="img/sale.png" alt="">
-
-                        <button><img src="img/icons//slider-right-arrow.svg" alt=""></button>
                         <div>
-                            <h3>жилой комплексСтаврополь</h3>
+                            <svg width="21" height="22" viewBox="0 0 21 22">
+                                <use xlink:href='img/svg/icons.svg#arrow' />
+                            </svg>
                         </div>
+                        <h3>жилой комплексСтаврополь</h3>
                     </a>
                     <a href="" class="project-card">
                         <img class="project-card__img" src="img/sale.png" alt="">
-
-                        <button><img src="img/icons//slider-right-arrow.svg" alt=""></button>
                         <div>
-                            <h3>жилой комплексСтаврополь</h3>
+                            <svg width="21" height="22" viewBox="0 0 21 22">
+                                <use xlink:href='img/svg/icons.svg#arrow' />
+                            </svg>
                         </div>
+                        <h3>жилой комплексСтаврополь</h3>
                     </a>
                     <a href="" class="project-card">
                         <img class="project-card__img" src="img/sale.png" alt="">
-
-                        <button><img src="img/icons//slider-right-arrow.svg" alt=""></button>
                         <div>
-                            <h3>жилой комплексСтаврополь</h3>
+                            <svg width="21" height="22" viewBox="0 0 21 22">
+                                <use xlink:href='img/svg/icons.svg#arrow' />
+                            </svg>
                         </div>
+                        <h3>жилой комплексСтаврополь</h3>
                     </a>
                 </div>
             </div>
@@ -367,29 +369,27 @@
                     <br><br> Просто отправьте готовый проект со сметой через эту форму
                 </p>
 
-                <form class="form">
-                    <div class="form__body">
-                        <h6>Введите свой телефон и прикрепите смету по кнопке ниже</h6>
-                        <div class="form__item" data-required="">
-                            <img src="img/rus.png" alt="">
-                            <input type="text" name="phone" id="phone" placeholder="+7 ( 999 ) 999-99-99"
-                                inputmode="text">
+                <div class="form">
+                    <form>
+                        <div class="form__body">
+                            <h6>Введите свой телефон и прикрепите смету по кнопке ниже</h6>
+                            <div class="form__item" data-required="">
+                                <img src="img/rus.png" alt="">
+                                <input type="text" name="phone" id="phone" placeholder="+7 ( 999 ) 999-99-99"
+                                    inputmode="text">
+                            </div>
+
+
+                            <div class="form__flex">
+                                <div class="form__file">
+                                    <label for="files" class="btn" data-text="ЗАГРУЗИТЬ ФАЙЛЫ">ЗАГРУЗИТЬ ФАЙЛЫ</label>
+                                    <input id="files" type="file">
+                                </div>
+                                <button class="" type=" submit">ОТПРАВИТЬ СМЕТУ</button>
+                            </div>
                         </div>
-
-                        <div class="form__flex">
-                            <label for="file">
-                                <span class="value filename">Прикрепите смету</span>
-                                <input id="file" name="file" type="file"
-                                    accept="application/msword, application/vnd.ms-powerpoint, text/plain, application/pdf">
-                            </label>
-
-                            <button class="" type="submit">ОТПРАВИТЬ СМЕТУ</button>
-                        </div>
-
-
-                    </div>
-
-                </form>
+                    </form>
+                </div>
             </div>
         </div>
     </section>
@@ -404,27 +404,27 @@
                         <div class="swiper-wrapper">
                             <div class="swiper-slide">
                                 <a data-fancybox href="https://www.youtube.com/watch?v=_sI_Ps7JSEk">
-                                    <img src="http://img.youtube.com/vi/_sI_Ps7JSEk/mqdefault.jpg" />
+                                    <img src="img/video.png" />
                                 </a>
                             </div>
                             <div class="swiper-slide">
                                 <a data-fancybox href="https://www.youtube.com/watch?v=_sI_Ps7JSEk">
-                                    <img src="http://img.youtube.com/vi/_sI_Ps7JSEk/mqdefault.jpg" />
+                                    <img src="img/video.png" />
                                 </a>
                             </div>
                             <div class="swiper-slide">
                                 <a data-fancybox href="https://www.youtube.com/watch?v=_sI_Ps7JSEk">
-                                    <img src="http://img.youtube.com/vi/_sI_Ps7JSEk/mqdefault.jpg" />
+                                    <img src="img/video.png" />
                                 </a>
                             </div>
                             <div class="swiper-slide">
                                 <a data-fancybox href="https://www.youtube.com/watch?v=_sI_Ps7JSEk">
-                                    <img src="http://img.youtube.com/vi/_sI_Ps7JSEk/mqdefault.jpg" />
+                                    <img src="img/video.png" />
                                 </a>
                             </div>
                             <div class="swiper-slide">
                                 <a data-fancybox href="https://www.youtube.com/watch?v=_sI_Ps7JSEk">
-                                    <img src="http://img.youtube.com/vi/_sI_Ps7JSEk/mqdefault.jpg" />
+                                    <img src="img/video.png" />
                                 </a>
                             </div>
                         </div>
@@ -563,6 +563,49 @@
                     </div>
                     <div>
                         <img src="img/bank.png" alt="">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="section contacts">
+        <div class="section__container _container">
+            <div class="section__body">
+                <h2>КОНТАКТЫ</h2>
+                <div class="grid grid-3">
+                    <div class="contacts-item">
+                        <label>позвоните или напишитев whats'app</label>
+                        <a href="tel:+78612123114" target="_blank">
+                            <span>
+                                <svg>
+                                    <use xlink:href='img/svg/icons.svg#phone' />
+                                </svg>
+                            </span>
+                            + 7 (861) 212-31-14
+                        </a>
+                    </div>
+                    <div class="contacts-item">
+                        <label>напишите на почту</label>
+                        <a href="mailto:info@bountyhouse.ru" target="_blank">
+                            <span>
+                                <svg>
+                                    <use xlink:href='img/svg/icons.svg#email' />
+                                </svg>
+                            </span>
+                            info@bountyhouse.ru
+                        </a>
+                    </div>
+                    <div class="contacts-item">
+                        <label>приходите в офис</label>
+                        <a href="" target="_blank">
+                            <span>
+                                <svg>
+                                    <use xlink:href='img/svg/icons.svg#geo' />
+                                </svg>
+                            </span>
+                            г. Краснодар, ул. Кубанская Набережная, д. 45, офис 900 (БЦ «Премьер»)
+                        </a>
                     </div>
                 </div>
             </div>
