--- a/src/html/footer.html
+++ b/src/html/footer.html
@@ -7,24 +7,7 @@
                         <img src="@img/footer-logo.png" alt="">
                     </a>
                     <p>ЖДЕМ ВАС В НАШЕМ <br> КОТТЕДЖНОМ ПОСЕЛКЕ</p>
-                    <div>
-
-                        <a href="" class="wh">
-                            <svg viewBox="0 0 30 30">
-                                <use xlink:href="@img/svg/icons.svg#whatsapp"></use>
-                            </svg>
-                        </a>
-                        <a href="" class="tg">
-                            <svg viewBox="0 0 30 30">
-                                <use xlink:href="@img/svg/icons.svg#telegram"></use>
-                            </svg>
-                        </a>
-                        <a href="" class="yt">
-                            <svg viewBox="0 0 30 30">
-                                <use xlink:href="@img/svg/icons.svg#youtube"></use>
-                            </svg>
-                        </a>
-                    </div>
+                    @@include('socials.html',{"class":""})
                 </div>
                 <nav class="footer__column">
                     <span>Навигация</span>
