--- a/src/html/header.html
+++ b/src/html/header.html
@@ -16,23 +16,7 @@
                     <li><a href="">Контакты</a></li>
                 </ul>
             </nav>
-            <div class="header__contacts">
-                <a href="" class="wh">
-                    <svg viewBox="0 0 30 30" >
-                        <use xlink:href="@img/svg/icons.svg#whatsapp"></use>
-                    </svg>
-                </a>
-                <a href="" class="tg">
-                    <svg viewBox="0 0 30 30" >
-                        <use xlink:href="@img/svg/icons.svg#telegram"></use>
-                    </svg>
-                </a>
-                <a href="" class="yt">
-                    <svg viewBox="0 0 30 30" >
-                        <use xlink:href="@img/svg/icons.svg#youtube"></use>
-                    </svg>
-                </a>
-            </div>
+            @@include('socials.html',{"class":"header__contacts"})
             <button class="header__burger">
                 <span></span>
                 <span></span>
