--- a/src/html/menu.html
+++ b/src/html/menu.html
@@ -13,22 +13,6 @@
                 <li><a href="">Контакты</a></li>
             </ul>
         </nav>
-        <div class="menu__contacts">
-            <a href="" class="wh">
-                <svg viewBox="0 0 30 30">
-                    <use xlink:href="@img/svg/icons.svg#whatsapp"></use>
-                </svg>
-            </a>
-            <a href="" class="tg">
-                <svg viewBox="0 0 30 30">
-                    <use xlink:href="@img/svg/icons.svg#telegram"></use>
-                </svg>
-            </a>
-            <a href="" class="yt">
-                <svg viewBox="0 0 30 30">
-                    <use xlink:href="@img/svg/icons.svg#youtube"></use>
-                </svg>
-            </a>
-        </div>
+        @@include('socials.html',{"class":"menu__contacts"})
     </div>
 </div>
