change hero sldier navigation

--- a/src/html/menu.html
+++ b/src/html/menu.html
@@ -6,7 +6,7 @@
         </button>
         <nav>
             <ul>
-                <li><a href="">Услуги</a></li>
+                <li><a href="#">Услуги</a></li>
                 <li><a href="">Проекты</a></li>
                 <li><a href="">Как мы работаем</a></li>
                 <li><a href="">Отзывы</a></li>
