--- a/src/index.html
+++ b/src/index.html
@@ -35,7 +35,6 @@
                                 <span>Строим <br> в ипотеку</span>
                             </li>
                         </ol>
-                        <div class="pagination"></div>
                     </div>
                 </div>
                 <div class="hero__slider">
@@ -54,12 +53,17 @@
                                 <img src="img/hero-slider/slide-2.png" alt="">
                             </div>
                         </div>
-                        <div class="navigation">
+                        <div class="hero__slider-controls">
                             <button class="prev">
-                                <img src="img/icons/slider-left-arrow.svg" alt="">
+                                <svg width="21" height="22" viewBox="0 0 21 22">
+                                    <use xlink:href='img/svg/icons.svg#arrow' />
+                                </svg>
                             </button>
+                            <div class="pagination"></div>
                             <button class="next">
-                                <img src="img/icons/slider-right-arrow.svg" alt="">
+                                <svg width="21" height="22" viewBox="0 0 21 22">
+                                    <use xlink:href='img/svg/icons.svg#arrow' />
+                                </svg>
                             </button>
                         </div>
                     </div>
@@ -264,6 +268,11 @@
                     <a href class="sale">
                         <img src="img/sale.png" alt="">
                         <p>узнай о сезонных акциях</p>
+                        <div>
+                            <svg width="21" height="22" viewBox="0 0 21 22">
+                                <use xlink:href='img/svg/icons.svg#arrow' />
+                            </svg>
+                        </div>
                     </a>
                     <a href="" class="project-card">
                         <img class="project-card__img" src="img/sale.png" alt="">
@@ -432,20 +441,14 @@
                     </div>
                     <div class="navigation">
                         <button class="prev">
-                            <svg width="27" height="29" viewBox="0 0 27 29" fill="none"
-                                xmlns="http://www.w3.org/2000/svg">
-                                <path
-                                    d="M26.7261 14.5366H3.21875M3.21875 14.5366L15.3286 2.42676M3.21875 14.5366L15.3286 26.6465"
-                                    stroke="#F8F8F8" stroke-width="4.27407" />
+                            <svg width="21" height="22" viewBox="0 0 21 22">
+                                <use xlink:href='img/svg/icons.svg#arrow' />
                             </svg>
                         </button>
                         <div class="pagination"></div>
                         <button class="next">
-                            <svg width="27" height="29" viewBox="0 0 27 29" fill="none"
-                                xmlns="http://www.w3.org/2000/svg">
-                                <path
-                                    d="M0.271929 14.5366H23.7793M23.7793 14.5366L11.6694 2.42676M23.7793 14.5366L11.6694 26.6465"
-                                    stroke="#F8F8F8" stroke-width="4.27407" />
+                            <svg width="21" height="22" viewBox="0 0 21 22">
+                                <use xlink:href='img/svg/icons.svg#arrow' />
                             </svg>
                         </button>
                     </div>
@@ -513,20 +516,14 @@
                     </div>
                     <div class="navigation">
                         <button class="prev">
-                            <svg width="27" height="29" viewBox="0 0 27 29" fill="none"
-                                xmlns="http://www.w3.org/2000/svg">
-                                <path
-                                    d="M26.7261 14.5366H3.21875M3.21875 14.5366L15.3286 2.42676M3.21875 14.5366L15.3286 26.6465"
-                                    stroke="#F8F8F8" stroke-width="4.27407" />
+                            <svg width="21" height="22" viewBox="0 0 21 22">
+                                <use xlink:href='img/svg/icons.svg#arrow' />
                             </svg>
                         </button>
                         <div class="pagination"></div>
                         <button class="next">
-                            <svg width="27" height="29" viewBox="0 0 27 29" fill="none"
-                                xmlns="http://www.w3.org/2000/svg">
-                                <path
-                                    d="M0.271929 14.5366H23.7793M23.7793 14.5366L11.6694 2.42676M23.7793 14.5366L11.6694 26.6465"
-                                    stroke="#F8F8F8" stroke-width="4.27407" />
+                            <svg width="21" height="22" viewBox="0 0 21 22">
+                                <use xlink:href='img/svg/icons.svg#arrow' />
                             </svg>
                         </button>
                     </div>
@@ -622,7 +619,9 @@
                         <div class="accordion__item-title" data-accordion-title>
                             <span>Когда вы получите ключи от дома?</span>
                             <button class="prev">
-                                <img src="img/icons/slider-left-arrow.svg" alt="">
+                                <svg width="21" height="22" viewBox="0 0 21 22">
+                                    <use xlink:href='img/svg/icons.svg#arrow' />
+                                </svg>
                             </button>
                         </div>
                         <div class="accordion__item-content" data-accordion-content>
@@ -642,7 +641,9 @@
                         <div class="accordion__item-title" data-accordion-title>
                             <span>Где увидеть примеры построенных домов?</span>
                             <button class="prev">
-                                <img src="img/icons/slider-left-arrow.svg" alt="">
+                                <svg width="21" height="22" viewBox="0 0 21 22">
+                                    <use xlink:href='img/svg/icons.svg#arrow' />
+                                </svg>
                             </button>
                         </div>
                         <div class="accordion__item-content" data-accordion-content>
@@ -662,7 +663,9 @@
                         <div class="accordion__item-title" data-accordion-title>
                             <span>Можно ли построить дом в ипотеку?</span>
                             <button class="prev">
-                                <img src="img/icons/slider-left-arrow.svg" alt="">
+                                <svg width="21" height="22" viewBox="0 0 21 22">
+                                    <use xlink:href='img/svg/icons.svg#arrow' />
+                                </svg>
                             </button>
                         </div>
                         <div class="accordion__item-content" data-accordion-content>
@@ -682,7 +685,9 @@
                         <div class="accordion__item-title" data-accordion-title>
                             <span>Почему нам доверяют строительство жилья?</span>
                             <button class="prev">
-                                <img src="img/icons/slider-left-arrow.svg" alt="">
+                                <svg width="21" height="22" viewBox="0 0 21 22">
+                                    <use xlink:href='img/svg/icons.svg#arrow' />
+                                </svg>
                             </button>
                         </div>
                         <div class="accordion__item-content" data-accordion-content>
@@ -702,7 +707,9 @@
                         <div class="accordion__item-title" data-accordion-title>
                             <span>Какие материалы мы используем?</span>
                             <button class="prev">
-                                <img src="img/icons/slider-left-arrow.svg" alt="">
+                                <svg width="21" height="22" viewBox="0 0 21 22">
+                                    <use xlink:href='img/svg/icons.svg#arrow' />
+                                </svg>
                             </button>
                         </div>
                         <div class="accordion__item-content" data-accordion-content>
