--- a/src/index.html
+++ b/src/index.html
@@ -1,9 +1,8 @@
 @@include('./html/head.html', {
 "title":"Главная",
-"class":"_noscrollbar",
 })
 
-@@include('./html/header.html',{"class":""})
+@@include('./html/header.html')
 
 <main>
 
